--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-select": "^2.0.0",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.331.0",
     "moment": "^2.30.1",
+    "negotiator": "^0.6.3",
     "next": "14.1.0",
+    "next-intl": "^3.9.1",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
@@ -28,6 +32,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20.11.19",
     "@types/pg": "^8.11.0",
     "@types/react": "^18",
